# ding_nsch_core_solver

./: .gitignore  CMakeLists.txt  README.md  README_ANALYSIS.md
docs/: solver_user_guide.md
python/: hydea_direction_server.py  hydea_pressure_options.py  hydea_pressure_options_alternating_100_1.py  hydea_pressure_options_alternating_10_1.py  hydea_pressure_options_alternating_10_2.py  hydea_pressure_options_alternating_10_3.py  hydea_pressure_options_alternating_3_2.py  hydea_pressure_options_alternating_3_2_cavity.py  hydea_pressure_options_deflated_pcg_1vec.py  hydea_pressure_options_deflated_pcg_2vec.py  hydea_pressure_options_deflated_pcg_2vec_cavity.py  hydea_pressure_options_deflated_pcg_3vec.py  hydea_pressure_solver.py  petsc_ch_options_gamg.py  petsc_pressure_options.py  petsc_pressure_options_gamg.py  petsc_pressure_options_icpcg_monitor.py  petsc_pressure_options_icpcg_monitor_atol1e6.py  petsc_pressure_solver.py  plot_rising_bubble_interface_compare.py  plot_rising_bubble_interface_compare_svg.py  plot_rising_bubble_pressure_compare.py  plot_rising_bubble_rhs_spectra.py  plot_shear_drop_comparison.py  plot_split_hydea_initial_residual_steps12.py  plot_zalesak_comparison.py  plot_zalesak_cycle_summary.py  postprocess_static_droplet.py  postprocess_taylor_deformation.py  pressure_pcg_analysis_report.py
src/: main.cpp
testcases/: 04_coupled_capillary_smoke.cfg  05_static_droplet_dr1.cfg  06_static_droplet_dr10.cfg  07_static_droplet_dr100.cfg  08_shear_droplet_re0p1_ca0p45.cfg  09_shear_droplet_deformation_reference.cfg  13_restart_smoke_initial.cfg  (+104 more)
(+25 files in other folders)
